debug-cors-jwt/istio/cors/istio-web-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-api-gw-vs
  namespace: istioinaction
spec:
  hosts:
  - "istioinaction.io"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        host: web-api
        port:
          number: 8080
    corsPolicy:
      maxAge: 1m
      allowCredentials: true
      allowHeaders:
      - foo
      - bar
      allowMethods:
      - GET
      allowOrigin:
      - http://istio.io
      allowOrigins:
      - exact: http://istio.io
